--- a/partials/_navbar.html
+++ b/partials/_navbar.html
@@ -3,17 +3,8 @@
         <button class="navbar-toggler text-dark d-lg-none align-self-center" type="button" ng-click="homeCtrl.toogleSidebar();">
             <span class="mdi mdi-menu"></span>
         </button>
-        <!-- <a class="navbar-brand brand-logo" href="index.html">
-            <img src="images/logo.svg" alt="logo" />
-        </a>
-        <a class="navbar-brand brand-logo-mini" href="index.html">
-            <img src="images/logo-mini.svg" alt="logo" />
-        </a> -->
     </div>
     <div class="navbar-menu-wrapper d-flex align-items-center">
-        <!-- <button class="navbar-toggler navbar-toggler-left d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-            <span class="mdi mdi-menu"></span>
-        </button> -->
         <ul class="navbar-nav navbar-nav-right">
             <li class="nav-item dropdown d-none d-xl-inline-block">
                 <a class="nav-link dropdown-toggle" id="UserDropdown" href data-toggle="dropdown" aria-expanded="false">
@@ -34,24 +25,12 @@
                             </div>
                         </div>
                     </a>
-                    <!-- <a class="dropdown-item mt-2">
-                        Manage Accounts
-                    </a>
-                    <a class="dropdown-item">
-                        Change Password
-                    </a>-->
-                    <!-- <a class="dropdown-item">
-                        Check Inbox
-                    </a>  -->
-                    <a href class="dropdown-item pt-4">
+                    <a href class="dropdown-item pt-4" ng-click="homeCtrl.logout();">
                         <i class="mdi mdi-logout"></i>
                         Sign Out
                     </a>
                 </div>
             </li>
         </ul>
-        <!-- <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-            <span class="mdi mdi-menu"></span>
-        </button> -->
     </div>
 </nav>
